--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -62,13 +62,59 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
+    .no-transition {
+      transition: none;
+    }
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
+    
+    function setDate() {
+      const now = new Date();
 
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      // try to handle case where hand does not travel backwards when appraoching 0th second/minute/hour
+      if (seconds > 0 && secondHand.classList.contains('no-transition')) {
+        secondHand.classList.remove('no-transition');
+      }
+      if (seconds === 59) {
+        secondHand.classList.add('no-transition');
+      }
 
+      const minutes = now.getMinutes();
+      const minutesDegrees = ((minutes / 60) * 360) + 90;
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+      // try to handle case where hand does not travel backwards when appraoching 0th second/minute/hour
+      if (minutes > 0 && minuteHand.classList.contains('no-transition')) {
+        minuteHand.classList.remove('no-transition');
+      }
+      if (minutes === 59) {
+        minuteHand.classList.add('no-transition');
+      }
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+      // try to handle case where hand does not travel backwards when appraoching 0th second/minute/hour
+      if (hours > 0 && hourHand.classList.contains('no-transition')) {
+        hourHand.classList.remove('no-transition');
+      }
+      if (hours === 59) {
+        hourHand.classList.add('no-transition');
+      }
+    }
+    setInterval(setDate, 1000);
   </script>
 </body>
 </html>
